CHANGES.txt - 2011-02-14
------------------------

CHANGES IN CUPS V1.5b1

	- Added new cupsRasterOpenIO function and CUPS_RASTER_WRITE_PWG to the
	  CUPS imaging library to support printing to IPP Everywhere raster
	  printers.
	- The scheduler now provides default values for the pages-per-minute and
	  pages-per-minute-color attributes for PPD files that lack a
	  Throughput keyword.
	- Email notifications did not work on Mac OS X.
	- The cupstestppd program now shows an error for files missing a
	  CloseGroup keyword (STR #3668)
	- Name resolution errors no longer cause queues to stop (STR #3719,
	  STR #3753)
	- Added a new cups-exec helper program that applies security profiles
	  to filters, port monitors, backends, CGI programs, and mini-daemons.
	- The web interface can now be disabled using the WebInterface directive
	  in cupsd.conf (STR #2625)
	- The scheduler now provides privacy controls for jobs and subscriptions
	  (STR #2969)
	- Added new cupsArrayNew3 API which offers memory management of array
	  elements.
	- Added several new color spaces to the CUPS raster format (STR #3419)
	- The Validate-Job operation now uses the same policy as Print-Job by
	  default. 
	- CUPS now uses iconv to implement all of its character encoding
	  support (STR #3097)
	- The scheduler now implements the Cancel-Jobs, Cancel-My-Jobs, and
	  Close-Job operations along with the job-ids operation attribute from
	  PWG 5100.11.
	- The main CUPS header (<cups/cups.h>) no longer includes the PPD header
	  (<cups/ppd.h>).
	- The scheduler and CUPS API now support the print-quality job template
	  attribute.
	- The scheduler no longer supports the old Mac OS X Server quota
	  plugin.
	- The scheduler now allows writing to /Users/Shared from print filters
	  on Mac OS X.
	- CUPS no longer supports the old ~/.cupsrc or ~/.lpoptions files from
	  CUPS 1.1.x.  The ~/.cups/client.conf and ~/.cups/lpoptions files that
	  were introduced in CUPS 1.2 must now be used.